image-swap/test/resources/patched-pod-container-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-container-registry
  namespace: app1
spec:
  containers:
  - name: nginx
    image: docker.io/nginx:1.19.0
  imagePullSecrets:
  - name: "acr-secret"
