image-swap/test/resources/patched-pod-docker-io.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-docker-io
  namespace: app1
spec:
  containers:
  - name: nginx
    image: container-registry.xxx.net/nginx:1.19.0
  imagePullSecrets:
  - name: "acr-secret"
