image-swap/test/resources/pod-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-init-container
  namespace: app1
spec:
  initContainers:
  - name: init-nginx
    image: container-registry.xxx.net/busybox:1.28
    command: ['sh', '-c', 'echo "Init container running"']
  containers:
  - name: nginx
    image: container-registry.xxx.net/nginx:1.19.0
