image-swap/test/resources/pod-my-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-my-registry
  namespace: default
spec:
  containers:
  - name: nginx
    image: my.registry.com/nginx:1.19.0
