image-swap/test/resources/pod-skip-verify.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-skip-verify
  namespace: app1
  labels:
    skip-verify: "true"
spec:
  containers:
  - name: nginx
    image: container-registry.xxx.net/nginx:1.19.0
